# FFT-IA-Attention-Head

fft_ia/: EXPLANATION.md  README.md  file_structure.md  pyproject.toml  requirements.txt  usage.py
fft_ia/fft_ia/: fused_kernel.py
fft_ia/tests/: test_fft_ia.py
