# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fft-ia"
version = "0.1.0"
description = "FFT-Inspired Attention: True O(N log N) Transformer with Softmax Fidelity"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "einops",
    "triton>=2.3; platform_system != 'Darwin'"
]

[project.optional-dependencies]
test = ["pytest", "numpy"]
dev = ["black", "ruff", "pre-commit"]

[project.urls]
Homepage = "https://github.com/yourname/fft-ia"
Repository = "https://github.com/yourname/fft-ia"
Issues = "https://github.com/yourname/fft-ia/issues"
